log/build_2022-12-08_12-06-35/mypkg/stderr.log
  File "/home/daisuke/ros2_ws/install/mypkg/lib/python3.6/site-packages/mypkg/talker.py", line 13
    def cb[]:
          ^
SyntaxError: invalid syntax

